modify kyverno policies to use preconditions.conditions
Signed-off-by: Mariam Fahmy <mariamfahmy66@gmail.com>

--- a/argo/application-prevent-default-project/application-prevent-default-project.yaml
+++ b/argo/application-prevent-default-project/application-prevent-default-project.yaml
@@ -23,10 +23,11 @@ spec:
             kinds:
               - Application
       preconditions:
-        all:
-        - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: NotEquals
-          value: DELETE
+        conditions:
+          all:
+          - key: "{{ request.operation || 'BACKGROUND' }}"
+            operator: NotEquals
+            value: DELETE
       validate:
         message: "The default project may not be used in an Application."
         pattern:
