--- a/istio/restrict-virtual-service-wildcard/restrict-virtual-service-wildcard.yaml
+++ b/istio/restrict-virtual-service-wildcard/restrict-virtual-service-wildcard.yaml
@@ -28,10 +28,11 @@ spec:
             kinds:
               - VirtualService
       preconditions:
-        all:
-        - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: AnyIn
-          value: ["CREATE", "UPDATE"]
+        conditions:
+          all:
+          - key: "{{ request.operation || 'BACKGROUND' }}"
+            operator: AnyIn
+            value: ["CREATE", "UPDATE"]
       validate:
         message: "Wildcards are not permitted as hosts."
         foreach:
