--- a/kubeops/config-syncer-secret-generation-from-rancher-capi/config-syncer-secret-generation-from-rancher-capi.yaml
+++ b/kubeops/config-syncer-secret-generation-from-rancher-capi/config-syncer-secret-generation-from-rancher-capi.yaml
@@ -82,10 +82,11 @@ spec:
           }
         jmesPath: 'to_string(@)'
     preconditions:
-      any:
-      - key: '{{ kubeconfigData || '''' | base64_encode(@) }}'
-        operator: NotEquals
-        value: '{{ currentKubeconfigData }}'
+      conditions:
+        any:
+        - key: '{{ kubeconfigData || '''' | base64_encode(@) }}'
+          operator: NotEquals
+          value: '{{ currentKubeconfigData }}'
     generate:
       synchronize: true
       apiVersion: v1
