--- a/other/add-imagepullsecrets-for-containers-and-initcontainers/add-imagepullsecrets-for-containers-and-initcontainers.yaml
+++ b/other/add-imagepullsecrets-for-containers-and-initcontainers/add-imagepullsecrets-for-containers-and-initcontainers.yaml
@@ -25,13 +25,14 @@ spec:
           kinds:
           - Pod
     preconditions:
-      any:
-      - key: "corp.reg.com"
-        operator: AnyIn
-        value: "{{ images.initContainers.*.registry || `[]` }}"
-      - key: "corp.reg.com"          
-        operator: AnyIn
-        value: "{{ images.containers.*.registry }}"
+      conditions:
+        any:
+        - key: "corp.reg.com"
+          operator: AnyIn
+          value: "{{ images.initContainers.*.registry || `[]` }}"
+        - key: "corp.reg.com"          
+          operator: AnyIn
+          value: "{{ images.containers.*.registry }}"
     mutate:
       patchStrategicMerge:
         spec:
