--- a/other/add-volume-deployment/add-volume-deployment.yaml
+++ b/other/add-volume-deployment/add-volume-deployment.yaml
@@ -22,10 +22,11 @@ spec:
           kinds:
           - Deployment
     preconditions:
-      any:
-      - key: "{{request.object.spec.template.metadata.annotations.\"vault.k8s.corp.net/inject\"}}"
-        operator: Equals
-        value: enabled
+      conditions:
+        any:
+        - key: "{{request.object.spec.template.metadata.annotations.\"vault.k8s.corp.net/inject\"}}"
+          operator: Equals
+          value: enabled
     mutate:
       patchesJson6902: |-
         - op: add
