--- a/other/check-serviceaccount/check-serviceaccount.yaml
+++ b/other/check-serviceaccount/check-serviceaccount.yaml
@@ -25,13 +25,14 @@ spec:
             kinds:
             - Pod
       preconditions:
-        all:
-        - key: "{{serviceAccountName}}"
-          operator: Equals
-          value: "*?"
-        - key: "{{request.operation}}"
-          operator: Equals
-          value: CREATE
+        conditions:
+          all:
+          - key: "{{serviceAccountName}}"
+            operator: Equals
+            value: "*?"
+          - key: "{{request.operation}}"
+            operator: Equals
+            value: CREATE
       validate:
         message: "The ServiceAccount used to create this Pod is confined to using the same account when running the Pod."
         pattern:
