--- a/other/dns-policy-and-dns-config/dns-policy-and-dns-config.yaml
+++ b/other/dns-policy-and-dns-config/dns-policy-and-dns-config.yaml
@@ -32,13 +32,14 @@ spec:
           kinds:
           - Pod
     preconditions:
-      any:
-      - key: "{{ request.object.spec.dnsPolicy }}"
-        operator: AnyIn
-        value: 
-        - ClusterFirst
-        - ClusterFirstWithHostNet
-        - None
+      conditions:
+        any:
+        - key: "{{ request.object.spec.dnsPolicy }}"
+          operator: AnyIn
+          value: 
+          - ClusterFirst
+          - ClusterFirstWithHostNet
+          - None
     mutate:
       patchStrategicMerge:
         spec:
