--- a/other/kubernetes-version-check/kubernetes-version-check.yaml
+++ b/other/kubernetes-version-check/kubernetes-version-check.yaml
@@ -25,10 +25,11 @@ spec:
           kinds:
           - Secret
     preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: Equals
-        value: CREATE
+      conditions:
+        all:
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: Equals
+          value: CREATE
     context:
     - name: minorversion
       apiCall:
