--- a/other/limit-configmap-for-sa/limit-configmap-for-sa.yaml
+++ b/other/limit-configmap-for-sa/limit-configmap-for-sa.yaml
@@ -32,17 +32,18 @@ spec:
           name: another-developer
           namespace: another-namespace
     preconditions:
-      all:
-      - key: "{{request.object.metadata.namespace}}"
-        operator: AnyIn
-        value:
-        - "any-namespace"
-        - "another-namespace"
-      - key: "{{request.object.metadata.name}}"
-        operator: AnyIn
-        value:
-        - "any-configmap-name-good"
-        - "another-configmap-name"
+      conditions:
+        all:
+        - key: "{{request.object.metadata.namespace}}"
+          operator: AnyIn
+          value:
+          - "any-namespace"
+          - "another-namespace"
+        - key: "{{request.object.metadata.name}}"
+          operator: AnyIn
+          value:
+          - "any-configmap-name-good"
+          - "another-configmap-name"
     validate:
       message: "{{request.object.metadata.namespace}}/{{request.object.kind}}/{{request.object.metadata.name}} resource is protected. Admin or allowed users can change the resource"
       deny:
