--- a/other/prepend-image-registry/prepend-image-registry.yaml
+++ b/other/prepend-image-registry/prepend-image-registry.yaml
@@ -26,12 +26,13 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: AnyIn
-        value:
-        - CREATE
-        - UPDATE
+      conditions:
+        all:
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: AnyIn
+          value:
+          - CREATE
+          - UPDATE
     mutate:
       foreach:
       - list: "request.object.spec.containers"
@@ -47,15 +48,16 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: AnyIn
-        value:
-        - CREATE
-        - UPDATE
-      - key: "{{ request.object.spec.initContainers[] || '' | length(@) }}"
-        operator: GreaterThanOrEquals
-        value: 1
+      conditions:
+        all:
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: AnyIn
+          value:
+          - CREATE
+          - UPDATE
+        - key: "{{ request.object.spec.initContainers[] || '' | length(@) }}"
+          operator: GreaterThanOrEquals
+          value: 1
     mutate:
       foreach:
       - list: "request.object.spec.initContainers"
