--- a/other/refresh-volumes-in-pods/refresh-volumes-in-pods.yaml
+++ b/other/refresh-volumes-in-pods/refresh-volumes-in-pods.yaml
@@ -34,10 +34,11 @@ spec:
             matchLabels:
               kyverno.io/watch: "true"
     preconditions:
-      all:
-      - key: "{{ request.operation }}"
-        operator: Equals
-        value: UPDATE
+      conditions:
+        all:
+        - key: "{{ request.operation }}"
+          operator: Equals
+          value: UPDATE
     mutate:
       targets:
         - apiVersion: v1
