--- a/other/remove-serviceaccount-token/remove-serviceaccount-token.yaml
+++ b/other/remove-serviceaccount-token/remove-serviceaccount-token.yaml
@@ -39,10 +39,11 @@ spec:
           jmesPath: request.object.spec.volumes[?projected].name[?starts_with(@,'kube-api-access-')] | [0] || ''
           default: ''
       preconditions:
-        all:
-        - key: "{{ tokenvolname }}"
-          operator: Equals
-          value: "?*"
+        conditions:
+          all:
+          - key: "{{ tokenvolname }}"
+            operator: Equals
+            value: "?*"
       mutate:
         foreach:
           - list: request.object.spec.volumes[]
