--- a/other/require-imagepullsecrets/require-imagepullsecrets.yaml
+++ b/other/require-imagepullsecrets/require-imagepullsecrets.yaml
@@ -22,12 +22,13 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      - key: "{{ images.containers.*.registry }}"
-        operator: AnyNotIn
-        value:
-        - ghcr.io
-        - quay.io
+      conditions:
+        all:
+        - key: "{{ images.containers.*.registry }}"
+          operator: AnyNotIn
+          value:
+          - ghcr.io
+          - quay.io
     validate:
       message: "An `imagePullSecret` is required when pulling from this registry."
       pattern:
