--- a/other/restart-deployment-on-secret-change/restart-deployment-on-secret-change.yaml
+++ b/other/restart-deployment-on-secret-change/restart-deployment-on-secret-change.yaml
@@ -32,10 +32,11 @@ spec:
           namespaces:
           - default
     preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: Equals
-        value: UPDATE
+      conditions:
+        all:
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: Equals
+          value: UPDATE
     mutate:
       targets:
         - apiVersion: apps/v1
