--- a/other/restrict-automount-sa-token/restrict-automount-sa-token.yaml
+++ b/other/restrict-automount-sa-token/restrict-automount-sa-token.yaml
@@ -25,10 +25,11 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      - key: "{{ request.\"object\".metadata.labels.\"app.kubernetes.io/part-of\" || '' }}"
-        operator: NotEquals
-        value: policy-reporter
+      conditions:
+        all:
+        - key: "{{ request.\"object\".metadata.labels.\"app.kubernetes.io/part-of\" || '' }}"
+          operator: NotEquals
+          value: policy-reporter
     validate:
       message: "Auto-mounting of Service Account tokens is not allowed."
       pattern:
