--- a/other/restrict-node-label-changes/restrict-node-label-changes.yaml
+++ b/other/restrict-node-label-changes/restrict-node-label-changes.yaml
@@ -43,13 +43,14 @@ spec:
           kinds:
           - Node
     preconditions:
-      all:
-      - key: "{{ request.operation || 'BACKGROUND' }}"
-        operator: Equals
-        value: UPDATE
-      - key: "{{ request.oldObject.metadata.labels.foo || '' }}"
-        operator: Equals
-        value: "?*"
+      conditions:
+        all:
+        - key: "{{ request.operation || 'BACKGROUND' }}"
+          operator: Equals
+          value: UPDATE
+        - key: "{{ request.oldObject.metadata.labels.foo || '' }}"
+          operator: Equals
+          value: "?*"
     validate:
       message: "Removing the `foo` label on a Node is not allowed."
       pattern:
