--- a/other/restrict-pod-controller-serviceaccount-updates/restrict-pod-controller-serviceaccount-updates.yaml
+++ b/other/restrict-pod-controller-serviceaccount-updates/restrict-pod-controller-serviceaccount-updates.yaml
@@ -31,10 +31,11 @@ spec:
             - ReplicaSet
             - ReplicationController
       preconditions:
-        all:
-        - key: "{{ request.operation }}"
-          operator: Equals
-          value: UPDATE
+        conditions:
+          all:
+          - key: "{{ request.operation }}"
+            operator: Equals
+            value: UPDATE
       validate:
         message: >-
           The serviceAccountName field may not be changed once created.
@@ -51,10 +52,11 @@ spec:
             kinds:
             - CronJob
       preconditions:
-        all:
-        - key: "{{ request.operation }}"
-          operator: Equals
-          value: UPDATE
+        conditions:
+          all:
+          - key: "{{ request.operation }}"
+            operator: Equals
+            value: UPDATE
       validate:
         message: >-
           The serviceAccountName field may not be changed once created.
