--- a/other/restrict-secrets-by-label/restrict-secrets-by-label.yaml
+++ b/other/restrict-secrets-by-label/restrict-secrets-by-label.yaml
@@ -26,14 +26,15 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      # check if any secrets are in env statements
-      - key: "{{ request.object.spec.[containers, initContainers, ephemeralContainers][].env[].valueFrom.secretKeyRef || '' | length(@) }}"
-        operator: GreaterThanOrEquals
-        value: 1
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: NotEquals
-        value: DELETE
+      conditions:
+        all:
+        # check if any secrets are in env statements
+        - key: "{{ request.object.spec.[containers, initContainers, ephemeralContainers][].env[].valueFrom.secretKeyRef || '' | length(@) }}"
+          operator: GreaterThanOrEquals
+          value: 1
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: NotEquals
+          value: DELETE
     validate:
       message: These Secrets are restricted.
       foreach:
@@ -58,14 +59,15 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      # check if any secrets are in envfrom statements
-      - key: "{{ request.object.spec.[containers, initContainers, ephemeralContainers][].envFrom[].secretRef || '' | length(@) }}"
-        operator: GreaterThanOrEquals
-        value: 1
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: NotEquals
-        value: DELETE
+      conditions:
+        all:
+        # check if any secrets are in envfrom statements
+        - key: "{{ request.object.spec.[containers, initContainers, ephemeralContainers][].envFrom[].secretRef || '' | length(@) }}"
+          operator: GreaterThanOrEquals
+          value: 1
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: NotEquals
+          value: DELETE
     validate:
       message: These Secrets are restricted.
       foreach:
@@ -90,14 +92,15 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      # check if any secrets are in volume statements
-      - key: "{{ request.object.spec.volumes[].secret || '' | length(@) }}"
-        operator: GreaterThanOrEquals
-        value: 1
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: NotEquals
-        value: DELETE
+      conditions:
+        all:
+        # check if any secrets are in volume statements
+        - key: "{{ request.object.spec.volumes[].secret || '' | length(@) }}"
+          operator: GreaterThanOrEquals
+          value: 1
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: NotEquals
+          value: DELETE
     validate:
       message: These Secrets are restricted.
       foreach:
