--- a/best-practices/check-deprecated-apis/check-deprecated-apis.yaml
+++ b/best-practices/check-deprecated-apis/check-deprecated-apis.yaml
@@ -52,25 +52,26 @@ spec:
           - storage.k8s.io/*/StorageClass
           - storage.k8s.io/*/VolumeAttachment
     preconditions:
-      all:
-      - key: "{{ request.operation || 'BACKGROUND' }}"
-        operator: NotEquals
-        value: DELETE
-      - key: "{{request.object.apiVersion}}"
-        operator: AnyIn
-        value:
-        - admissionregistration.k8s.io/v1beta1
-        - apiextensions.k8s.io/v1beta1
-        - apiregistration.k8s.io/v1beta1
-        - authentication.k8s.io/v1beta1
-        - authorization.k8s.io/v1beta1
-        - certificates.k8s.io/v1beta1
-        - coordination.k8s.io/v1beta1
-        - extensions/v1beta1
-        - networking.k8s.io/v1beta1
-        - rbac.authorization.k8s.io/v1beta1
-        - scheduling.k8s.io/v1beta1
-        - storage.k8s.io/v1beta1
+      conditions:
+        all:
+        - key: "{{ request.operation || 'BACKGROUND' }}"
+          operator: NotEquals
+          value: DELETE
+        - key: "{{request.object.apiVersion}}"
+          operator: AnyIn
+          value:
+          - admissionregistration.k8s.io/v1beta1
+          - apiextensions.k8s.io/v1beta1
+          - apiregistration.k8s.io/v1beta1
+          - authentication.k8s.io/v1beta1
+          - authorization.k8s.io/v1beta1
+          - certificates.k8s.io/v1beta1
+          - coordination.k8s.io/v1beta1
+          - extensions/v1beta1
+          - networking.k8s.io/v1beta1
+          - rbac.authorization.k8s.io/v1beta1
+          - scheduling.k8s.io/v1beta1
+          - storage.k8s.io/v1beta1
     validate:
       message: >-
         {{ request.object.apiVersion }}/{{ request.object.kind }} is deprecated and will be removed in v1.22.
