--- a/best-practices/require-drop-all/require-drop-all.yaml
+++ b/best-practices/require-drop-all/require-drop-all.yaml
@@ -25,10 +25,11 @@ spec:
             kinds:
               - Pod
       preconditions:
-        all:
-        - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: NotEquals
-          value: DELETE
+        conditions:
+          all:
+          - key: "{{ request.operation || 'BACKGROUND' }}"
+            operator: NotEquals
+            value: DELETE
       validate:
         message: >-
           Containers must drop `ALL` capabilities.
