--- a/best-practices/require-drop-cap-net-raw/require-drop-cap-net-raw.yaml
+++ b/best-practices/require-drop-cap-net-raw/require-drop-cap-net-raw.yaml
@@ -26,10 +26,11 @@ spec:
             kinds:
               - Pod
       preconditions:
-        all:
-        - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: NotEquals
-          value: DELETE
+        conditions:
+          all:
+          - key: "{{ request.operation || 'BACKGROUND' }}"
+            operator: NotEquals
+            value: DELETE
       validate:
         message: >-
           Containers must drop the `CAP_NET_RAW` capability.
