--- a/cert-manager/limit-duration/limit-duration.yaml
+++ b/cert-manager/limit-duration/limit-duration.yaml
@@ -21,13 +21,14 @@ spec:
           kinds:
           - Certificate
     preconditions:
-      all:
-      - key: "{{ contains(request.object.spec.issuerRef.name, 'letsencrypt') }}"
-        operator: Equals
-        value: False
-      - key: "{{ request.object.spec.duration }}"
-        operator: NotEquals
-        value: ""
+      conditions:
+        all:
+        - key: "{{ contains(request.object.spec.issuerRef.name, 'letsencrypt') }}"
+          operator: Equals
+          value: False
+        - key: "{{ request.object.spec.duration }}"
+          operator: NotEquals
+          value: ""
     validate:
       message: "certificate duration must be < than 2400h (100 days)"
       deny:
