--- a/openshift/disallow-self-provisioner-binding/disallow-self-provisioner-binding.yaml
+++ b/openshift/disallow-self-provisioner-binding/disallow-self-provisioner-binding.yaml
@@ -23,13 +23,14 @@ spec:
           kinds:
           - ClusterRoleBinding
     preconditions:
-      all:
-      - key: "{{request.object.metadata.name}}"
-        operator: Equals
-        value: self-provisioners
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: Equals
-        value: UPDATE
+      conditions:
+        all:
+        - key: "{{request.object.metadata.name}}"
+          operator: Equals
+          value: self-provisioners
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: Equals
+          value: UPDATE
     validate:
       message: >-
         Binding to the self-provisioners cluster role is not allowed.
@@ -42,10 +43,11 @@ spec:
           kinds:
           - ClusterRoleBinding
     preconditions:
-      all:
-      - key: "{{request.object.metadata.name || ''}}"
-        operator: NotEquals
-        value: self-provisioners
+      conditions:
+        all:
+        - key: "{{request.object.metadata.name || ''}}"
+          operator: NotEquals
+          value: self-provisioners
     validate:
       message: >-
         Binding to the self-provisioners cluster role is not allowed.
