--- a/other/annotate-base-images/annotate-base-images.yaml
+++ b/other/annotate-base-images/annotate-base-images.yaml
@@ -27,10 +27,11 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: NotEquals
-        value: DELETE
+      conditions:
+        all:
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: NotEquals
+          value: DELETE
     mutate:
       foreach:
       - list: "request.object.spec.containers"
