--- a/other/block-large-images/block-large-images.yaml
+++ b/other/block-large-images/block-large-images.yaml
@@ -25,10 +25,11 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: NotEquals
-        value: DELETE
+      conditions:
+        all:
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: NotEquals
+          value: DELETE
     validate:
       message: "images with size greater than 2Gi not allowed"  
       foreach:
