--- a/other/create-pod-antiaffinity/create-pod-antiaffinity.yaml
+++ b/other/create-pod-antiaffinity/create-pod-antiaffinity.yaml
@@ -21,11 +21,12 @@ spec:
             kinds:
               - Deployment
       preconditions:
-        # This precondition selects Pods with the label `app` defined
-        all:
-        - key: "{{request.object.spec.template.metadata.labels.app || ''}}"
-          operator: NotEquals
-          value: ""
+        conditions:
+          # This precondition selects Pods with the label `app` defined
+          all:
+          - key: "{{request.object.spec.template.metadata.labels.app || ''}}"
+            operator: NotEquals
+            value: ""
       # Mutates the Deployment resource to add fields.
       mutate:
         patchStrategicMerge:
