--- a/other/deny-commands-in-exec-probe/deny-commands-in-exec-probe.yaml
+++ b/other/deny-commands-in-exec-probe/deny-commands-in-exec-probe.yaml
@@ -25,13 +25,14 @@ spec:
             kinds:
               - Pod
       preconditions:
-        all:
-        - key: "{{ length(request.object.spec.containers[].livenessProbe.exec.command[] || `[]`) }}"
-          operator: GreaterThan
-          value: 0
-        - key: "{{ request.operation }}"
-          operator: NotEquals
-          value: DELETE
+        conditions:
+          all:
+          - key: "{{ length(request.object.spec.containers[].livenessProbe.exec.command[] || `[]`) }}"
+            operator: GreaterThan
+            value: 0
+          - key: "{{ request.operation }}"
+            operator: NotEquals
+            value: DELETE
       validate:
         message: Cannot use commands `jcmd`, `ps`, or `ls` in liveness probes.
         deny:
