--- a/other/exclude-namespaces-dynamically/exclude-namespaces-dynamically.yaml
+++ b/other/exclude-namespaces-dynamically/exclude-namespaces-dynamically.yaml
@@ -31,10 +31,11 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      - key: "{{request.object.metadata.namespace}}"
-        operator: AnyNotIn
-        value: "{{namespacefilters.data.exclude}}"
+      conditions:
+        all:
+        - key: "{{request.object.metadata.namespace}}"
+          operator: AnyNotIn
+          value: "{{namespacefilters.data.exclude}}"
     validate:
       message: >
         Creating Pods in the {{request.namespace}} namespace,
