--- a/other/inject-env-var-from-image-label/inject-env-var-from-image-label.yaml
+++ b/other/inject-env-var-from-image-label/inject-env-var-from-image-label.yaml
@@ -26,10 +26,11 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: NotEquals
-        value: DELETE
+      conditions:
+        all:
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: NotEquals
+          value: DELETE
     mutate:
       foreach:
       - list: "request.object.spec.containers"
