--- a/other/mutate-large-termination-gps/mutate-large-termination-gps.yaml
+++ b/other/mutate-large-termination-gps/mutate-large-termination-gps.yaml
@@ -25,10 +25,11 @@ spec:
             kinds:
               - Pod
       preconditions:
-        all:
-        - key: "{{request.object.spec.terminationGracePeriodSeconds || `0` }}"
-          operator: GreaterThan
-          value: 50   # maximum tGPS allowed by cluster admin
+        conditions:
+          all:
+          - key: "{{request.object.spec.terminationGracePeriodSeconds || `0` }}"
+            operator: GreaterThan
+            value: 50   # maximum tGPS allowed by cluster admin
       mutate:
         patchStrategicMerge:
           spec:
