--- a/other/prevent-naked-pods/prevent-naked-pods.yaml
+++ b/other/prevent-naked-pods/prevent-naked-pods.yaml
@@ -27,10 +27,11 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: NotEquals
-        value: DELETE
+      conditions:
+        all:
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: NotEquals
+          value: DELETE
     validate:
       message: "Naked Pods are not allowed. They must be created by Pod controllers."
       deny:
