--- a/other/require-image-source/require-image-source.yaml
+++ b/other/require-image-source/require-image-source.yaml
@@ -27,10 +27,11 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: NotEquals
-        value: DELETE
+      conditions:
+        all:
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: NotEquals
+          value: DELETE
     validate:
       message: "The image source must be specified in a label or annotation."
       foreach:
