--- a/other/restrict-node-selection/restrict-node-selection.yaml
+++ b/other/restrict-node-selection/restrict-node-selection.yaml
@@ -26,10 +26,11 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: Equals
-        value: CREATE
+      conditions:
+        all:
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: Equals
+          value: CREATE
     validate:
       message: Setting the nodeSelector field is prohibited.
       pattern:
@@ -42,10 +43,11 @@ spec:
           kinds:
           - Pod
     preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: Equals
-        value: CREATE
+      conditions:
+        all:
+        - key: "{{request.operation || 'BACKGROUND'}}"
+          operator: Equals
+          value: CREATE
     validate:
       message: Setting the nodeName field is prohibited.
       pattern:
