--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           #!/bin/bash
           set -euo pipefail
 
-          # Define through each policy directory in the repository 
+          # Define the directory to ignore
           ignore_dir="$GITHUB_WORKSPACE/pod-security/enforce"
 
           # Loop through each policy directory in the repository
@@ -33,12 +33,12 @@ jobs:
             if [[ "$policy_dir" == "$GITHUB_WORKSPACE" ]]; then
               continue
             fi
-
-            # Skip the directory to ignore 
-            if [["$policy_dir" == "$ignore_dir" ]]; then
+            
+            # Skip the ignore directory
+            if [[ "$policy_dir" == "$ignore_dir" ]]; then
               continue
             fi
-            
+
             # Skip directories that contain subdirectories
             if find "$policy_dir" -mindepth 1 -type d -print -quit | read; then
               # If it does, skip the filename validation
@@ -54,7 +54,6 @@ jobs:
               exit 1
             fi
 
-            
             # Check if a .yml or .yaml file with the same name as the directory exists in the directory
             if [[ ! -f "$policy_dir/$dir_name.yml" ]] && [[ ! -f "$policy_dir/$dir_name.yaml" ]]; then
               echo "No .yml or .yaml file named $dir_name found in directory $policy_dir"
@@ -66,8 +65,8 @@ jobs:
               echo "artifacthub-pkg.yml or artifacthub-pkg.yaml file is not found in the same folder as the policy in directory $policy_dir"
               exit 1
             fi
-          done
-      
+          done  
+
       - name: Checkout
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab
         with:
