fix: require-storageclass policy
Signed-off-by: Joe Bowbeer <joe.bowbeer@gmail.com>

--- a/other/require-storageclass/kyverno-test.yaml
+++ b/other/require-storageclass/kyverno-test.yaml
@@ -21,6 +21,11 @@ results:
     result: pass
   - policy: require-storageclass
     rule: ss-storageclass
+    resource: goodss-novct
+    kind: StatefulSet
+    result: pass
+  - policy: require-storageclass
+    rule: ss-storageclass
     resource: badss
     kind: StatefulSet
     result: fail
