--- a/other/require-storageclass/require-storageclass.yaml
+++ b/other/require-storageclass/require-storageclass.yaml
@@ -11,8 +11,8 @@ metadata:
       PersistentVolumeClaims (PVCs) and StatefulSets may optionally define a StorageClass
       to dynamically provision storage. In a multi-tenancy environment where StorageClasses are
       far more common, it is often better to require storage only be provisioned from these
-      StorageClasses. This policy requires that PVCs and StatefulSets define the storageClassName
-      field with some value.
+      StorageClasses. This policy requires that PVCs and StatefulSets containing
+      volumeClaimTemplates define the storageClassName field with some value.
 spec:
   validationFailureAction: audit
   background: true
@@ -38,6 +38,6 @@ spec:
       message: "StatefulSets must define a storageClassName."
       pattern:
         spec:
-          volumeClaimTemplates:
+          =(volumeClaimTemplates):
             - spec:
                 storageClassName: "?*"
